--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -2,13 +2,10 @@
 buildscript {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
-
-        def nav_version = "2.3.0"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "com.android.tools.build:gradle:4.0.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,9 +15,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
-        // maven { url "https://oss.jfrog.org/libs-snapshot" }
-        // maven { url 'http://repo1.maven.org/maven2' }
+        jcenter()
     }
 }
 
