--- a/iOS/MonsterCards.xcodeproj/xcshareddata/xcschemes/MonsterCards.xcscheme
+++ b/iOS/MonsterCards.xcodeproj/xcshareddata/xcschemes/MonsterCards.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E2F7246F25005E89007D87ED"
-               BuildableName = "MonsterCards.app"
+               BuildableName = "Monster Cards.app"
                BlueprintName = "MonsterCards"
                ReferencedContainer = "container:MonsterCards.xcodeproj">
             </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E2F7246F25005E89007D87ED"
-            BuildableName = "MonsterCards.app"
+            BuildableName = "Monster Cards.app"
             BlueprintName = "MonsterCards"
             ReferencedContainer = "container:MonsterCards.xcodeproj">
          </BuildableReference>
@@ -82,7 +82,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E2F7246F25005E89007D87ED"
-            BuildableName = "MonsterCards.app"
+            BuildableName = "Monster Cards.app"
             BlueprintName = "MonsterCards"
             ReferencedContainer = "container:MonsterCards.xcodeproj">
          </BuildableReference>
