--- a/iOS/docs/_config.yml
+++ b/iOS/docs/_config.yml
@@ -32,7 +32,7 @@ github_username:  headhunter45
 # Build settings
 theme: jekyll-theme-tactile
 plugins:
-  - jekyll-feed
+  # - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
