--- a/iOS/docs/_config.yml
+++ b/iOS/docs/_config.yml
@@ -34,6 +34,11 @@ theme: jekyll-theme-tactile
 plugins:
   # - jekyll-feed
 
+github:
+  public: true
+  is_project_page: true
+  repository_url: https://github.com/headhunter45/MonsterCards-iOS
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
