--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -19,6 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        // maven { url "https://oss.jfrog.org/libs-snapshot" }
+        // maven { url 'http://repo1.maven.org/maven2' }
     }
 }
 
