--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,5 @@ dependencies {
     // optional - Test helpers
     //testImplementation "androidx.room:room-testing:$room_version"
 
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
