--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,9 @@ dependencies {
     //testImplementation "androidx.room:room-testing:$room_version"
 
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    // Flipper
+    debugImplementation 'com.facebook.flipper:flipper:0.87.0'
+    debugImplementation 'com.facebook.soloader:soloader:0.10.1'
+    releaseImplementation 'com.facebook.flipper:flipper-noop:0.87.0'
 }
