--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -12,7 +12,12 @@ def appCenterLocalSecret = properties.getProperty('appCenter.localSecret')
 def appCenterEnvSecret = System.getenv('APPCENTER_SECRET')
 def appCenterSecret = appCenterLocalSecret != null ? appCenterLocalSecret : appCenterEnvSecret != null ? appCenterEnvSecret : ""
 def appCenterSdkVersion = '3.3.0'
-def nav_version = "2.3.0"
+def nav_version = '2.3.5'
+def room_version = '2.3.0'
+def rxjava_version = '3.0.0'
+def flipper_version = '0.87.0'
+def soloader_version = '0.10.1'
+def gson_version = '2.8.6'
 
 android {
     compileSdkVersion 30
@@ -58,39 +63,40 @@ android {
 }
 
 dependencies {
-    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
-    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
-
+    // Included libs
     implementation fileTree(dir: "libs", include: ["*.jar"])
+
+    // Google
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'com.atlassian.commonmark:commonmark:0.15.2'
-    testImplementation 'junit:junit:4.12'
+
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    def room_version = "2.3.0-rc01"
-    def rxjava_version = "3.0.0"
-
+    // Room DB
     implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
     implementation "io.reactivex.rxjava3:rxandroid:$rxjava_version"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-
-    // optional - RxJava3 support for Room
     implementation "androidx.room:room-rxjava3:$room_version"
-
-    // optional - Test helpers
     //testImplementation "androidx.room:room-testing:$room_version"
 
-    implementation 'com.google.code.gson:gson:2.8.6'
+    // AppCenter
+    debugImplementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    debugImplementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
 
     // Flipper
-    debugImplementation 'com.facebook.flipper:flipper:0.87.0'
-    debugImplementation 'com.facebook.soloader:soloader:0.10.1'
-    releaseImplementation 'com.facebook.flipper:flipper-noop:0.87.0'
+    debugImplementation "com.facebook.flipper:flipper:$flipper_version"
+    debugImplementation "com.facebook.soloader:soloader:$soloader_version"
+    releaseImplementation "com.facebook.flipper:flipper-noop:$flipper_version"
+
+    // Other 3rd Party
+    implementation 'com.atlassian.commonmark:commonmark:0.15.2'
+    implementation "com.google.code.gson:gson:$gson_version"
 }
